welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: type mismatch;
 found   : Array[java.awt.Color]
 required: java.awt.Color
    Col(taille,T)
               ^Array1:23: error: java.awt.Color does not take parameters
   setCouleurBrosse(T(i));
                     ^